Completion of the Nav bar primary structure

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+::selection {
+    color: #fff;
+    background: #FD871F;
+    text-shadow: none;
+}
