--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,14 +3,14 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    width: 100%;
     height: 100vh;
-    position: relative;
 }
 
 .content_box {
     position: absolute;
     top: 44%;
-    margin-left: 45px;
+    right: 49%;
 }
 
 .content_box_title{
@@ -48,3 +48,74 @@
     background: #FD871F;
     border-color: #FD871F;
 }
+/* Header Styles End */
+
+
+/* Nav Bar Styles Start */
+.navBar {
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    transition-duration: .3s;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.7,1,.7,1);
+    min-height: 50px;
+}
+
+.nav_list {
+    display: flex;
+    margin: 0;
+}
+
+.logo {
+    padding: 30px 0;
+}
+
+.nav_item_child {
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 700;
+    color: #fff;
+    letter-spacing: .02em;
+    font-family: "Roboto", sans-serif;
+    line-height: 55px;
+    padding: 20px 0  20px 40px;
+    transition-duration: .3s;
+    transition-property: all;
+    transition-timing-function: cubic-bezier(.7,1,.7,1);
+}
+
+.nav_item_child:hover {
+    color: #ff0000;
+}
+
+.hamburgerMenu {
+    display: none;
+    cursor: pointer;
+}
+/* Nav Bar Styles End */
+
+
+/* Responsive Nav Start */
+@media screen and (max-width: 1200px) {
+
+    .nav_item_child {
+        padding: 20px 0  20px 35px;
+    }
+    
+}
+
+@media screen and (max-width: 992px) {
+
+    .nav_list {
+        display: none;
+    }
+
+    .hamburgerMenu {
+        display: block;
+    }
+
+    
+    
+    
+}
+
+/* Responsive Nav End */
