--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -1,5 +1,5 @@
 .product_sct {
-    padding: 100px 0 100px 0;
+    /* padding: 100px 0 100px 0; */
 }
 
 .product_title {
@@ -14,4 +14,12 @@
     font-weight: 400;
     color: #a6a7aa;
     margin-bottom: 15px;
+}
+
+/* Products Card Styles Part */
+
+.product_card_img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
