--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -48,3 +48,14 @@
 
 
 /* Team box Style */
+.panel_col {
+    margin-left: 195px;
+}
+
+.panel {
+    border: none;
+    margin-bottom: 0;
+    border-radius: 4px;
+    background-color: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
