--- a/src/components/Team/Team.css
+++ b/src/components/Team/Team.css
@@ -59,3 +59,21 @@
     background-color: #fff;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
 }
+
+.panel_header {
+    background: #fff;
+    border: none;
+    padding: 0;
+}
+
+.panel_header>h4>a {
+    display: block;
+    padding: 30px;
+    text-decoration: none;
+    color: #515769;
+}
+
+
+.panel_body {
+    display: none;
+}
